Add calical and local-volume-provisioner, adjust urls

--- a/charts/kubezero-app/values.yaml
+++ b/charts/kubezero-app/values.yaml
@@ -1,7 +1,10 @@
 destination:
   server: https://kubernetes.default.svc
 source:
-  repoURL: https://git.zero-downtime.net/ZeroDownTime/k8s-kustomize-lib
+  # This repoURL is used a base for all the repoURLs applications
+  # Setting this to a eg. private git repo incl. the use of pathPrefix allows kubezero to be 
+  # integrated into any repository as a git subtree if for example public internet access is unavailable
+  repoURL: https://github.com/zero-down-time/kubezero
   targetRevision: HEAD
   pathPrefix: ''
 
