--- a/charts/kubezero-app/Chart.yaml
+++ b/charts/kubezero-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: kubezero
-description: KubeZero - ZeroDownTime Kubernetes
+description: KubeZero ArgoCD Application - Root chart of the KubeZero
 type: application
 version: 0.1.0
