Workaround for alias not working recursively, use argo-cd and index hack instead

--- a/charts/kubezero/templates/istio-service.yaml
+++ b/charts/kubezero/templates/istio-service.yaml
@@ -8,7 +8,7 @@ spec:
   gateways:
   - {{ .Values.istio.gateway }}
   hosts:
-  - {{ .Values.argocd.server.config.url }}
+  - {{ index .Values "argo-cd" "server" "config" "url" }}
   http:
   - name: grpc
     match:
