--- a/charts/kubezero/Chart.yaml
+++ b/charts/kubezero/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: KubeZero Helm chart to install Zero Down Time Kuberenetes platform
 name: kubezero
-version: 0.1.1
+version: 0.1.3
 home: https://kubezero.com
 keywords:
   - kubezero
@@ -12,7 +12,4 @@ maintainers:
 dependencies:
   - name: argo-cd
     version: 2.2.12
-    # Switch once PR is merged
-    # repository: https://argoproj.github.io/argo-helm
-    repository: file://charts/argo-cd
-    alias: argocd
+    repository: https://argoproj.github.io/argo-helm
