--- a/charts/kubezero-app/templates/local-volume-provisioner.yaml
+++ b/charts/kubezero-app/templates/local-volume-provisioner.yaml
@@ -10,11 +10,11 @@ spec:
   project: kubezero
 
   source:
-    repoURL: {{ .Values.source.repoURL }}
-    targetRevision: {{ .Values.source.targetRevision }}
-    path: {{ .Values.source.pathPrefix }}/artifacts/local-volume-provisioner
+    repoURL: {{ default .Values.defaultSource.repoURL }}
+    targetRevision: {{ default .Values.defaultSource.targetRevision }}
+    path: {{ default .Values.defaultSource.pathPrefix }}/artifacts/local-volume-provisioner
 
   destination:
-    server: {{ .Values.destination.server }}
+    server: {{ default .Values.defaultDestination.server }}
     namespace: kube-system
 {{- end }}
