--- a/charts/kubezero/templates/project.yaml
+++ b/charts/kubezero/templates/project.yaml
@@ -24,4 +24,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: cert-manager
     server: https://kubernetes.default.svc
+
+  clusterResourceWhitelist:
+  - group: '*'
+    kind: '*'
 {{- end }}
