Workaround for restircted naming scheme in Argo

--- a/charts/kubezeroApp/templates/_apps_common.yaml
+++ b/charts/kubezeroApp/templates/_apps_common.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ .name }}
+  name: {{ .name | lower }}
   namespace: argocd
   labels:
     app.kubernetes.io/name: {{ .name }}
