Bugix for wrong helm values format

--- a/charts/kubezeroApp/templates/_apps_common.yaml
+++ b/charts/kubezeroApp/templates/_apps_common.yaml
@@ -20,7 +20,7 @@ spec:
     path: {{ default .root.Values.defaultSource.pathPrefix }}charts/{{ .name }}
     {{- if $values }}
     helm:
-      values:
+      values: |
 {{- toYaml $values | nindent 8 }}
     {{- end }}
     {{- else }}
