--- a/charts/kubezero-app/values-all.yaml
+++ b/charts/kubezero-app/values-all.yaml
@@ -12,8 +12,8 @@ defaultSource:
 calico:
   enabled: true
 
-localVolumeProvisioner:
+local-volume-provisioner:
   enabled: true
 
-certManager:
+cert-manager:
   enabled: true
