--- a/charts/kubezero-cert-manager/Chart.yaml
+++ b/charts/kubezero-cert-manager/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: kubezeroCertManager
+name: kubezero-cert-manager
 description: KubeZero Umbrella Chart for cert-manager
 type: application
 version: 0.1.1
