Fix wrong namespace for cert-manager

--- a/charts/kubezero-app/templates/_apps_common.yaml
+++ b/charts/kubezero-app/templates/_apps_common.yaml
@@ -29,5 +29,5 @@ spec:
 
   destination:
     server: {{ default .root.Values.defaultDestination.server }}
-    namespace: kube-system
+    namespace: {{ default "kube-system" .namespace }}
 {{- end }}
