Enabled auto-sync and prune for kubezero apps by default

--- a/charts/kubezero-app/templates/_apps_common.yaml
+++ b/charts/kubezero-app/templates/_apps_common.yaml
@@ -30,4 +30,9 @@ spec:
   destination:
     server: {{ default .root.Values.defaultDestination.server }}
     namespace: {{ default "kube-system" .namespace }}
+
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: false
 {{- end }}
