Add icons to all charts

--- a/charts/kubezero-cert-manager/Chart.yaml
+++ b/charts/kubezero-cert-manager/Chart.yaml
@@ -2,8 +2,9 @@ apiVersion: v2
 name: kubezero-cert-manager
 description: KubeZero Umbrella Chart for cert-manager
 type: application
-version: 0.2.1
+version: 0.3.0
 home: https://kubezero.com
+icon: https://cdn.zero-downtime.net/assets/logo_small.png
 keywords:
   - kubezero
   - cert-manager
