--- a/charts/kubezero/Chart.yaml
+++ b/charts/kubezero/Chart.yaml
@@ -3,6 +3,7 @@ description: KubeZero Helm chart to install Zero Down Time Kuberenetes platform
 name: kubezero
 version: 0.2.3
 home: https://kubezero.com
+icon: https://cdn.zero-downtime.net/assets/logo_small.png
 keywords:
   - kubezero
   - argocd
