--- a/charts/kubezero-app/Chart.yaml
+++ b/charts/kubezero-app/Chart.yaml
@@ -4,6 +4,7 @@ description: KubeZero ArgoCD Application - Root chart of the KubeZero
 type: application
 version: 0.1.10
 home: https://kubezero.com
+icon: https://cdn.zero-downtime.net/assets/logo_small.png
 keywords:
   - kubezero
   - argocd
