First draft of Kiam chart, various fixes and improvements, cascade delete enabled by default

--- a/charts/kubezero-app/templates/_apps_common.yaml
+++ b/charts/kubezero-app/templates/_apps_common.yaml
@@ -9,6 +9,10 @@ metadata:
     helm.sh/chart: {{ .root.Chart.Name }}-{{ .root.Chart.Version | replace "+" "_" }}
     app.kubernetes.io/managed-by: {{ .root.Release.Service }}
     app.kubernetes.io/part-of: kubezero
+  {{- if not .retain }}
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+  {{ end }}
 spec:
   project: kubezero
 
@@ -16,12 +20,12 @@ spec:
     repoURL: {{ default .root.Values.defaultSource.repoURL }}
     targetRevision: {{ default .root.Values.defaultSource.targetRevision }}
     {{- if eq .type "helm" }}
-    {{ $values := index .root.Values .name "values" }}
+    {{ $my_values := index .root.Values .name "values" }}
     path: {{ default .root.Values.defaultSource.pathPrefix }}charts/kubezero-{{ .name }}
-    {{- if $values }}
+    {{- if $my_values }}
     helm:
       values: |
-{{- toYaml $values | nindent 8 }}
+{{- toYaml $my_values | nindent 8 }}
     {{- end }}
     {{- else }}
     path: {{ default .root.Values.defaultSource.pathPrefix }}artifacts/kubezero-{{ .name }}
