--- a/charts/kubezero-app/Chart.yaml
+++ b/charts/kubezero-app/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-app
 description: KubeZero ArgoCD Application - Root chart of the KubeZero
 type: application
-version: 0.1.10
+version: 0.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/logo_small.png
 keywords:
@@ -11,3 +11,4 @@ keywords:
   - gitops
 maintainers:
   - name: Quarky9
+kubeVersion: ">= 1.16.0"
