--- a/charts/kubezero-app/values-all.yaml
+++ b/charts/kubezero-app/values-all.yaml
@@ -1,13 +1,17 @@
-defaultDestination:
-  server: https://kubernetes.default.svc
+global:
+  defaultDestination:
+    server: https://kubernetes.default.svc
 
-defaultSource:
   # This repoURL is used a base for all the repoURLs applications
-  # Setting this to a eg. private git repo incl. the use of pathPrefix allows kubezero to be 
+  # Setting this to a eg. private git repo incl. the use of pathPrefix allows kubezero to be
   # integrated into any repository as a git subtree if for example public internet access is unavailable
-  repoURL: https://github.com/zero-down-time/kubezero
-  targetRevision: HEAD
-  pathPrefix: ''
+  defaultSource:
+    # defaultSource.repoURL -- default repository for argocd applications
+    repoURL: https://github.com/zero-down-time/kubezero
+    # defaultSource.targetRevision -- default tracking of repoURL
+    targetRevision: HEAD
+    # defaultSource.pathPrefix -- optional path prefix within repoURL to support eg. remote subtrees
+    pathPrefix: ''
 
 calico:
   enabled: true
