--- a/charts/kubezero-kiam/templates/postsync-ns.yaml
+++ b/charts/kubezero-kiam/templates/postsync-ns.yaml
@@ -2,20 +2,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: {{ .name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/part-of: kubezero
+{{ include "kubezero-lib.labels" . | indent 4 }}
   name: kiam-namespace-annotate
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: {{ .name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/part-of: kubezero
+{{ include "kubezero-lib.labels" . | indent 4 }}
   name: kiam-namespace-annotate
 rules:
   - apiGroups:
@@ -32,10 +26,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/name: {{ .name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/part-of: kubezero
+{{ include "kubezero-lib.labels" . | indent 4 }}
   name: kiam-namespace-annotate
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -52,13 +43,10 @@ metadata:
   name: kiam-kube-system-ns-annotation
   namespace: kube-system
   annotations:
-    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
   labels:
-    app.kubernetes.io/name: {{ .name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/part-of: kubezero
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   template:
     spec:
