--- a/charts/kubezero-kiam/templates/certificates.yaml
+++ b/charts/kubezero-kiam/templates/certificates.yaml
@@ -2,6 +2,8 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: kiam-agent
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   secretName: kiam-agent-tls
   issuerRef:
@@ -15,6 +17,8 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: kiam-server
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   secretName: kiam-server-tls
   issuerRef:
