--- a/charts/kubezero-cert-manager/templates/cluster-issuer.yaml
+++ b/charts/kubezero-cert-manager/templates/cluster-issuer.yaml
@@ -3,6 +3,8 @@ apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
   name: {{ .Values.clusterIssuer.name }}
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   acme:
     server: {{ .Values.clusterIssuer.server }}
