--- a/charts/kubezero-app/templates/_app.yaml
+++ b/charts/kubezero-app/templates/_app.yaml
@@ -1,14 +1,11 @@
-{{- define "kubezero.app" }}
+{{- define "kubezero-app.app" }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ .name | lower }}
   namespace: argocd
   labels:
-    app.kubernetes.io/name: {{ .name }}
-    helm.sh/chart: {{ .root.Chart.Name }}-{{ .root.Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/managed-by: {{ .root.Release.Service }}
-    app.kubernetes.io/part-of: kubezero
+{{ include "kubezero-lib.labels" .root | indent 4 }}
   {{- if not .retain }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io
