--- a/charts/kubezero-app/templates/calico.yaml
+++ b/charts/kubezero-app/templates/calico.yaml
@@ -1,3 +1,3 @@
 {{- if .Values.calico.enabled }}
-{{ template "kubezero.app" dict "root" . "name" "calico" "type" "kustomize" "retain" true }}
+{{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "kustomize" "retain" true }}
 {{- end }}
