--- a/charts/kubezero-app/templates/kiam.yaml
+++ b/charts/kubezero-app/templates/kiam.yaml
@@ -1,3 +1,3 @@
 {{- if index .Values "kiam" "enabled" }}
-{{ template "kubezero.app" dict "root" . "name" "kiam" "type" "helm" }}
+{{ template "kubezero-app.app" dict "root" . "name" "kiam" "type" "helm" }}
 {{- end }}
