--- a/charts/kubezero-app/templates/local-volume-provisioner.yaml
+++ b/charts/kubezero-app/templates/local-volume-provisioner.yaml
@@ -1,3 +1,3 @@
 {{- if index .Values "local-volume-provisioner" "enabled" }}
-{{ template "kubezero.app" dict "root" . "name" "local-volume-provisioner" "type" "kustomize" }}
+{{ template "kubezero-app.app" dict "root" . "name" "local-volume-provisioner" "type" "kustomize" }}
 {{- end }}
