--- a/charts/kubezero/templates/app.yaml
+++ b/charts/kubezero/templates/app.yaml
@@ -4,10 +4,7 @@ metadata:
   name: kubezero
   namespace: argocd
   labels:
-    app.kubernetes.io/name: kubezero
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   project: kubezero
   source:
