--- a/charts/kubezero-cert-manager/templates/cluster-issuer.yaml
+++ b/charts/kubezero-cert-manager/templates/cluster-issuer.yaml
@@ -5,6 +5,8 @@ metadata:
   name: {{ .Values.clusterIssuer.name }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
+  annotations:
+    "helm.sh/hook": "post-install"
 spec:
   acme:
     server: {{ .Values.clusterIssuer.server }}
