Revert annotations for cert-manager, enable selfheal for cert-manager to work around bootstrap issues

--- a/charts/kubezero-app/templates/_app.yaml
+++ b/charts/kubezero-app/templates/_app.yaml
@@ -35,5 +35,7 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      {{- if .selfheal }}
+      selfHeal: true
+      {{- end }}
 {{- end }}
