--- a/charts/kubezero-app/templates/cert-manager.yaml
+++ b/charts/kubezero-app/templates/cert-manager.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "cert-manager" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "cert-manager" "type" "helm" "namespace" "cert-manager" }}
+{{ template "kubezero-app.app" dict "root" . "name" "cert-manager" "type" "helm" "namespace" "cert-manager" "selfheal" "true" }}
 ---
 apiVersion: v1
 kind: Namespace
