--- a/charts/kubezero-cert-manager/values.yaml
+++ b/charts/kubezero-cert-manager/values.yaml
@@ -45,6 +45,6 @@ cert-manager:
   prometheus:
     servicemonitor:
       enabled: false
-  # cert-manager.podAnnotations."iam.amazonaws.com/role" -- IAM role ARN the cert-manager might use via kiam eg."arn:aws:iam::123456789012:role/certManagerRoleArn"
-  podAnnotations:
-    iam.amazonaws.com/role: ""
+  # cert-manager.podAnnotations -- "iam.amazonaws.com/roleIAM:" role ARN the cert-manager might use via kiam eg."arn:aws:iam::123456789012:role/certManagerRoleArn"
+  podAnnotations: {}
+  #   iam.amazonaws.com/role: ""
